Start create the header for desktop view

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -5,6 +5,7 @@
 @import 'sbcore/_media';
 @import 'sbcore/_reset';
 
+@import 'containers/_c-header';
 @import 'containers/_c-slider';
 @import 'containers/_c-top';
 @import 'containers/_c-button';
