--- a/src/scss/containers/_c-button.scss
+++ b/src/scss/containers/_c-button.scss
@@ -12,6 +12,7 @@
   font-size: 24px;
   line-height: 60px;
   color: white;
+  font-weight: 600;
   &--pink {
     $bgcolor: #f582d6;
     background-color: $bgcolor;
