Start create the footer

--- a/src/scss/_vars.scss
+++ b/src/scss/_vars.scss
@@ -25,8 +25,8 @@ $gridSystem:          25, 50, 100;
 /*** Медиа-выражения
 
 *------------------------------------------------------------*
-| Миксины для медиавыражений заданы в файле "pessio/_m.scss"; |
-|             Система гридов задана в файле "pessio/_g.scss"; |
+| Миксины для медиавыражений заданы в файле "sbcore/_media.scss"; |
+|             Система гридов задана в файле "sbcore/_grid.scss"; |
 *------------------------------------------------------------*
 
 *------------------------------------------------------------------------------------------------------------*
