--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -4,8 +4,10 @@
 @import 'sbcore/_global';
 @import 'sbcore/_media';
 @import 'sbcore/_reset';
+@import 'sbcore/_grid';
 
 @import 'containers/_c-header';
+@import 'containers/_c-footer';
 @import 'containers/_c-slider';
 @import 'containers/_c-top';
 @import 'containers/_c-button';
