--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -11,3 +11,4 @@
 @import 'containers/_c-slider';
 @import 'containers/_c-top';
 @import 'containers/_c-button';
+@import 'containers/_c-socialIcons';
