--- a/src/scss/containers/_c-footer.scss
+++ b/src/scss/containers/_c-footer.scss
@@ -1,10 +1,73 @@
 .c-footer {
   background-color: #2c2c2c;
   @extend .wrapper;
+  padding-top: 70px;
+  padding-bottom: 70px;
+  .c-socialIcons {
+    margin-left: -10px;
+    &__item {
+      &:not(:last-child) {
+        margin-right: 10px;
+      }
+    }
+  }
   a, p, h3 {
     color: #9fa3a7;
+    font-size: 12px;
   }
   h3 {
     color: #ffffff;
+    text-transform: uppercase;
+    margin-bottom: 20px;
+  }
+  &__row {
+    &:nth-child(1) {
+      border-bottom: 1px solid grey;
+      padding-bottom: 50px;
+      .col-25 {
+        padding-right: 20px;
+      }
+    }
+    &:nth-child(2) {
+      padding-top: 20px;
+      padding-bottom: 40px;
+    }
+  }
+  &__navVertical {
+    li {
+      text-transform: uppercase;
+      font-size: 13px;
+      &:not(:last-child) {
+        margin-bottom: 12px;
+      }
+    }
+  }
+  &__navHorizontal {
+    li {
+      text-transform: uppercase;
+      display: inline-block;
+      &:not(:last-child) {
+        margin-right: 50px;
+      }
+      a {
+        color: white;
+      }
+    }
+  }
+  &__logo {
+    width: 200px;
+    max-width: 80%;
+    display: inline-block;
+    img {
+      width: 100%;
+    }
+  }
+  &__copyright {
+    text-align: center;
+    font-size: 12px;
+  }
+  &__contacts {
+    font-size: 14px !important;
+    line-height: 25px;
   }
 }
