--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -12,3 +12,5 @@
 @import 'containers/_c-top';
 @import 'containers/_c-button';
 @import 'containers/_c-socialIcons';
+@import 'containers/_c-basic';
+@import 'containers/_c-basicCard';
