--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -14,3 +14,4 @@
 @import 'containers/_c-socialIcons';
 @import 'containers/_c-basic';
 @import 'containers/_c-basicCard';
+@import 'containers/_c-extendedNav';
