--- a/src/scss/sbcore/_reset.scss
+++ b/src/scss/sbcore/_reset.scss
@@ -18,6 +18,9 @@ div, h1, h2, h3, h4, h5, h6, ul, ol, li, a, p, span {
   margin: 0;
   padding: 0;
 }
+* {
+  background-repeat: no-repeat;
+}
 ul {
   list-style: none;
 }
