--- a/src/scss/containers/_c-header.scss
+++ b/src/scss/containers/_c-header.scss
@@ -5,14 +5,63 @@
   right: 0;
   z-index: 200;
   @extend .wrapper;
+  .c-navButton {
+    display: none;
+    position: absolute;
+    top: 25px;
+    left: 0;
+    @include a-mobile() {
+      display: block;
+    }
+  }
+  nav {
+    @include a-mobile() {
+      .c-navButton {
+        left: 20px;
+      }
+      $nav-width: 320px;
+      $border-color: #e2e2e2;  
+      position: fixed;
+      top: 0;
+      bottom: 0;
+      left: -$nav-width;
+      background-color: white;  
+      width: $nav-width;
+      transition: left 0.3s;
+      z-index: 500;
+      ul {
+        &.c-header__navGroup--first {
+          li:nth-child(1) {
+            border-top: 1px solid $border-color; 
+          }
+        }
+        li {
+          border-bottom: 1px solid $border-color; 
+          a {
+            display: block;
+            color: black;
+            text-align: left;
+            padding: 10px 10px 10px 20px;
+          }
+        }
+      }
+    }
+  }
   &--white {
     position: relative;
     background-color: white;
+    .c-navButton {
+      div {
+        background-color: black;
+      }
+    }
     .c-header {
       &__navItemExtended {
-        span {
-          &:after {
-            border-color: black;
+        a {
+          @include de() {
+            &:after {
+              border-color: black;
+            }
           }
         }
       }
@@ -58,37 +107,62 @@
     text-align: center;
     padding-top: 15px;
     padding-bottom: 15px;
+    @include ad() {
+      padding-bottom: 10px;
+    }
+  }
+  &__navScrollable {
+    @include e-mobile() {
+      position: absolute;
+      top: 0;
+      left: 0;
+      right: 0;
+    }
+    @include a-mobile() {
+      position: absolute;
+      top: 70px;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      overflow-y: auto;
+    }
   }
   &__navItemExtended {
-    span {
-      &:after {
-        content: '';
-        display: block;
-        width: 5px;
-        height: 5px;
-        border-left: 2px solid white;
-        border-bottom: 2px solid white;
-        position: absolute;
-        top: 5px;
-        right: -15px;
-        transform: rotate(-45deg);
-        pointer-events: none;
-      }
-      &:before {
-        content: '';
-        display: block;
-        position: absolute;
-        top: -5px;
-        right: -20px;
-        bottom: -10px;
-        left: -5px;
-      }
-      &:hover {
-        &:before {
-          bottom: -70px;
+    @include de() {
+      & > div {
+        &:after {
+          content: '';
+          position: absolute;
+          top: 7px;
+          right: -46px;
+          width: 58px;
+          height: 112px;
+          transform: rotate(-45deg);
+          display: none;  
+        }
+        &:hover {
+          height: 100px;
+          &:after {
+            display: block;
+          }
         }
       }
-    }
+      a {
+        &:after {
+          content: '';
+          display: block;
+          width: 5px;
+          height: 5px;
+          border-left: 2px solid white;
+          border-bottom: 2px solid white;
+          position: absolute;
+          top: 5px;
+          right: -15px;
+          transform: rotate(-45deg);
+          pointer-events: none;
+        }
+      }
+    }  
   }
   &__logo {
     display: inline-block;
@@ -99,12 +173,19 @@
         display: none;
       }
     }
+    @include ad() {
+      width: 150px;
+      margin-left: -30px;
+    }
   }
   &__buttons {
     position: absolute;
     top: 47px;
     right: 0;
     font-size: 0;
+    @include ad() {
+      top: 30px;
+    }
   }
   &__button {
     display: inline-block;
@@ -139,7 +220,8 @@
     }
   }
   &__navGroup {
-    @include ce() {
+    
+    @include e-mobile() {
       $links-gap: 40px;
       position: absolute;
       top: 50px;
@@ -166,6 +248,23 @@
             margin-left: $links-gap;
           }
         }
+      }
+    }
+    @include ad() {
+        top: 30px;
+    }
+    
+    @include a-mobile() {
+      top: 0;
+    }
+  } 
+}
+
+body.is-active {
+  .c-header {
+    nav {
+      @include a-mobile() {
+        left: 0;
       }
     }
   }
