--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -15,3 +15,4 @@
 @import 'containers/_c-basic';
 @import 'containers/_c-basicCard';
 @import 'containers/_c-extendedNav';
+@import 'containers/_c-navButton';
