--- a/src/scss/containers/_c-button.scss
+++ b/src/scss/containers/_c-button.scss
@@ -16,6 +16,11 @@
   color: #696969;
   font-weight: 100;
   text-transform: uppercase;
+  @include ad() {
+    height: 50px;
+    line-height: 48px;
+    min-width: 250px;
+  }
   &--small {
     min-width: 222px;
     font-size: 16px;
