--- a/src/scss/containers/_c-extendedNav.scss
+++ b/src/scss/containers/_c-extendedNav.scss
@@ -3,13 +3,15 @@
   $bgOffset: 50px;
   position: absolute;
   z-index: 500;
-  left: 120px;
-  right: 120px;
+  left: 80px;
+  right: 80px;
   top: 130px;
   padding-right: $imageSize;
   display: none;
   &.is-active {
-    display: block;
+    @include de() {
+      display: block;
+    }
   }
   &__bg {
     position: absolute;
