--- a/src/scss/sbcore/_extend.scss
+++ b/src/scss/sbcore/_extend.scss
@@ -18,7 +18,16 @@
 	opacity: 0;
 }
 .wrapper {
-	padding-left: 120px;
-	padding-right: 120px;
+	padding-left: 80px;
+	padding-right: 80px;
+  @include ad() {
+    padding-left: 20px;
+    padding-right: 20px;
+  }
 }
-
+.transition {
+	transition: all .1s;
+}
+.transition-hover {
+	transition: all 0.3s;
+}
