HTML for products

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -14,5 +14,7 @@
 @import 'containers/_c-socialIcons';
 @import 'containers/_c-basic';
 @import 'containers/_c-basicCard';
+@import 'containers/_c-card';
 @import 'containers/_c-extendedNav';
 @import 'containers/_c-navButton';
+@import 'containers/_c-containerWithSidenav';
