--- a/src/scss/containers/_c-extendedNav.scss
+++ b/src/scss/containers/_c-extendedNav.scss
@@ -80,6 +80,7 @@
       }
     }
     &--description {
+      max-width: 300px;
       width: 40%;
       padding-right: 40px;
       color: #696969;
