--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -15,6 +15,8 @@
 @import 'containers/_c-basic';
 @import 'containers/_c-basicCard';
 @import 'containers/_c-card';
+@import 'containers/_c-filter';
 @import 'containers/_c-extendedNav';
 @import 'containers/_c-navButton';
+@import 'containers/_c-breadcrumbs';
 @import 'containers/_c-containerWithSidenav';
