Markup for c-cart

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -20,3 +20,6 @@
 @import 'containers/_c-navButton';
 @import 'containers/_c-breadcrumbs';
 @import 'containers/_c-containerWithSidenav';
+@import 'containers/_c-cart';
+@import 'containers/_c-cartItem';
+@import 'containers/_c-voter';
